[WGSL] Fix f32 remainder for vectors and compound assignment https://bugs.webkit.org/show_bug.cgi?id=264604 rdar://118239990

Reviewed by Mike Wyrzykowski.

We were not emitting fmod for compound assignments or for the binary operation
between two vectors of floats.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):
* Source/WebGPU/WGSL/tests/valid/overload.wgsl:

Canonical link: https://commits.webkit.org/270640@main